<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:orientation="horizontal"
    card_view:cardCornerRadius="5dp"
    card_view:cardUseCompatPadding="true">
<LinearLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:orientation="vertical">
<TextView
    android:id="@+id/dishItemTitle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="TextView"
    android:textAlignment="center"
    android:textAppearance="@style/TextAppearance.AppCompat.Large" />
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/dishImage"
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:scaleType="fitXY"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintTop_toTopOf="parent"
        card_view:srcCompat="@drawable/not_found"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/packsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/PackageSection"
        card_view:layout_constraintEnd_toStartOf="@+id/dishImage"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pack2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/pack_12"
        card_view:layout_constraintBottom_toTopOf="@+id/pack6"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toBottomOf="@+id/packsTitle" />

    <TextView
        android:id="@+id/pack4"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:text="@string/pack_2"
        card_view:layout_constraintBaseline_toBaselineOf="@+id/pack2"
        card_view:layout_constraintStart_toEndOf="@+id/pack2" />

    <TextView
        android:id="@+id/pack6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/pack_6"
        card_view:layout_constraintBottom_toTopOf="@+id/pack12"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toBottomOf="@+id/pack2" />

    <TextView
        android:id="@+id/pack8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/pack_8"
        card_view:layout_constraintBaseline_toBaselineOf="@+id/pack6"
        card_view:layout_constraintStart_toEndOf="@+id/pack6" />

    <TextView
        android:id="@+id/pack12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/pack_12"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toBottomOf="@+id/pack6"
        card_view:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:layout_editor_absoluteY="30dp">

    <TextView
        android:id="@+id/addDishAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="addDishToOrder"
        android:text="@string/add_dish"
        android:textAlignment="center"
        android:textColor="?android:attr/colorMultiSelectHighlight"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/moreInfoAction"
        android:layout_width="64dp"
        android:layout_height="18dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/more_info"
        android:textAlignment="center"
        android:textColor="#2196F3"
        card_view:layout_constraintStart_toEndOf="@+id/addDishAction"
        card_view:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/sendOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        android:onClick="sendOrder"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:srcCompat="@android:drawable/ic_menu_send" />
</androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
    </androidx.cardview.widget.CardView>